test_outputs/connlist/udn_test_2_explain_output.txt

#######################################################
# Specific connections and their reasons in UDN green #
#######################################################
----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between 0.0.0.0-255.255.255.255[External] => green[udn]/webserver-2[Pod]:

Allowed connections:
	Allowed TCP:[9001] due to the following policies and rules:
		Egress (Allowed) due to the system default (Allow all)
		Ingress (Allowed)
			NetworkPolicy 'green/ingress-port-9001-only' allows connections by Ingress rule #1

Denied connections:
	Denied TCP:[1-9000,9002-65535], UDP, SCTP due to the following policies and rules:
		Egress (Allowed) due to the system default (Allow all)
		Ingress (Denied)
			NetworkPolicy 'green/ingress-port-9001-only' selects green[udn]/webserver-2[Pod], and Ingress rule #1 selects 0.0.0.0-255.255.255.255[External], but the protocols and ports do not match

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between 0.0.0.0-255.255.255.255[External] => green[udn]/webserver[Pod]:

Allowed connections:
	Allowed TCP:[9001] due to the following policies and rules:
		Egress (Allowed) due to the system default (Allow all)
		Ingress (Allowed)
			NetworkPolicy 'green/ingress-port-9001-only' allows connections by Ingress rule #1

Denied connections:
	Denied TCP:[1-9000,9002-65535], UDP, SCTP due to the following policies and rules:
		Egress (Allowed) due to the system default (Allow all)
		Ingress (Denied)
			NetworkPolicy 'green/ingress-port-9001-only' selects green[udn]/webserver[Pod], and Ingress rule #1 selects 0.0.0.0-255.255.255.255[External], but the protocols and ports do not match

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between green[udn]/webserver-2[Pod] => green[udn]/webserver[Pod]:

Allowed connections:
	Allowed TCP:[9001] due to the following policies and rules:
		Egress (Allowed) due to the system default (Allow all)
		Ingress (Allowed)
			NetworkPolicy 'green/ingress-port-9001-only' allows connections by Ingress rule #1

Denied connections:
	Denied TCP:[1-9000,9002-65535], UDP, SCTP due to the following policies and rules:
		Egress (Allowed) due to the system default (Allow all)
		Ingress (Denied)
			NetworkPolicy 'green/ingress-port-9001-only' selects green[udn]/webserver[Pod], and Ingress rule #1 selects green[udn]/webserver-2[Pod], but the protocols and ports do not match

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between green[udn]/webserver[Pod] => green[udn]/webserver-2[Pod]:

Allowed connections:
	Allowed TCP:[9001] due to the following policies and rules:
		Egress (Allowed) due to the system default (Allow all)
		Ingress (Allowed)
			NetworkPolicy 'green/ingress-port-9001-only' allows connections by Ingress rule #1

Denied connections:
	Denied TCP:[1-9000,9002-65535], UDP, SCTP due to the following policies and rules:
		Egress (Allowed) due to the system default (Allow all)
		Ingress (Denied)
			NetworkPolicy 'green/ingress-port-9001-only' selects green[udn]/webserver-2[Pod], and Ingress rule #1 selects green[udn]/webserver[Pod], but the protocols and ports do not match


#########################################################
# All Connections due to the system default (Allow all) #
#########################################################
0.0.0.0-255.255.255.255[External] => blue[udn]/webserver[Pod]
blue[udn]/webserver[Pod] => 0.0.0.0-255.255.255.255[External]
green[udn]/webserver-2[Pod] => 0.0.0.0-255.255.255.255[External]
green[udn]/webserver[Pod] => 0.0.0.0-255.255.255.255[External]

*** Note: Connections between any peers from separate isolated networks are denied by default and therefore not listed in this report.
